# speclib

./: Makefile  pyproject.toml
.agent-fox/: config.toml  steering.md
.agent-fox/specs/02_campaign_session/: tasks.md
.agent-fox/specs/03_agent_pipeline/: tasks.md
.agent-fox/specs/04_af_spec_cli/: tasks.md
.agent-fox/specs/05_spec_skill/: tasks.md
.agent-fox/specs/06_refine_question_export/: design.md  prd.md  requirements.md  tasks.md  test_spec.md
.agent-fox/specs/07_refine_answer_recording/: design.md  prd.md  requirements.md  tasks.md  test_spec.md
.agent-fox/specs/08_afspec_validate_artifact/: tasks.md
.agent-fox/specs/10_monorepo_restructure/: tasks.md
.agent-fox/specs/11_mvp_execution/: prd.md
.agent-fox/specs/12_coder_foundation/: tasks.md
.agent-fox/specs/13_spec_analysis_planning/: tasks.md
.agent-fox/specs/14_tdd_execution_engine/: tasks.md
.agent-fox/specs/15_safety_observability/: tasks.md
.agent-fox/specs/archive/02_campaign_session/: prd.md  test_spec.md
docs/: coordination-layer.md  runtime-layer.md  services-architecture.md
docs/errata/: 02_property_test_p4_hypothesis_tmp_path.md
examples/: prd.md
examples/hub_example/: campaign.yaml  qa2.json
examples/hub_example/01_phase1/: _session.json  prd.md
speclib/: agent.py  campaign.py  cli.py  errors.py  prompts.py  session.py  tools.py
speclib/skill/: __init__.py  af-spec.md
tests/: conftest.py  conftest_agent.py  test_afspec_validation.py  test_agent.py  test_cli.py  test_install_skill.py  test_prompts.py  test_session.py  test_session_agent.py  test_tools.py
(+10 files in other folders)
