[project]
name = "speclib"
version = "0.1.0"
description = "Spec creation tool for standalone authoring of spec packages"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "click>=8.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "hypothesis>=6.100",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
